[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acmeeh-admin"
version = "1.0.0"
description = "Python client library and CLI for the ACMEEH Admin API"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "requests>=2.28,<3",
    "click>=8.1,<9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "responses>=0.23",
    "ruff>=0.4",
    "mypy>=1.8",
    "types-requests>=2.28",
]

[project.scripts]
acmeeh-admin = "acmeeh_admin.cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
packages = ["acmeeh_admin"]
mypy_path = "src"
